# crypto-crawler-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  rustfmt.toml
carbonbot/: .envrc.dev  Cargo.toml  Dockerfile  Dockerfile.amazonlinux  Dockerfile.debian  Dockerfile.trade  README.md  pm2.funding_rate.config.js  pm2.json  pm2.l2_event.config.js  pm2.l2_snapshot.json  pm2.misc.config.js  pm2.ticker.config.js  pm2.trade.config.js  pm2.trade.json
carbonbot/conf/: logrotate.conf  logrotate.funding_rate.conf  logrotate.l2_event.conf  logrotate.misc.conf  logrotate.sh  logrotate.ticker.conf  logrotate.trade.conf  rclone.conf  run_crawlers.sh  upload.sh
carbonbot/conf/logrotate/: logrotate.bbo.conf  logrotate.candlestick.conf  logrotate.l2_snapshot.conf  logrotate.l2_topk.conf  logrotate.l3_event.conf  logrotate.misc.conf  logrotate.open_interest.conf  logrotate.other.conf  logrotate.ticker.conf
carbonbot/conf/pm2/: pm2.bbo.config.js  pm2.candlestick.config.js  pm2.funding_rate.config.js  pm2.l2_event.config.js  pm2.l2_snapshot.config.js  pm2.l2_topk.config.js  pm2.l3_event.config.js  pm2.misc.config.js  pm2.open_interest.config.js  pm2.other.config.js  pm2.ticker.config.js  pm2.trade.config.js
carbonbot/rclone/: rclone.sh
carbonbot/src/: lib.rs  main.rs  utils.rs
carbonbot/src/misc_crawlers/: binance.rs  bitmex.rs  bybit.rs  coinbase_pro.rs  huobi.rs  mod.rs  utils.rs
carbonbot/src/writers/: file_writer.rs  mod.rs  rotated_file_writer.rs
crypto-client/: Cargo.toml  README.md
crypto-client/src/: lib.rs
crypto-contract-value/: Cargo.toml  README.md
crypto-contract-value/src/: lib.rs
crypto-contract-value/src/exchanges/: binance.rs  bitfinex.rs  bitget.rs  bitmex.rs  bybit.rs  deribit.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kucoin.rs  mexc.rs  mod.rs  mxc.rs  okex.rs  okx.rs  zbg.rs
crypto-crawler/: Cargo.toml  README.md
crypto-crawler-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crypto-crawler-ffi/include/: crypto_crawler.h  crypto_crawler_ffi.h
crypto-crawler-ffi/src/: lib.rs
crypto-crawler/src/: lib.rs  main.rs  market_type.rs  msg.rs
crypto-crawler/src/crawlers/: binance.rs  bitfinex.rs  bitget.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bitz.rs  bybit.rs  coinbase_pro.rs  deribit.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kucoin.rs  mod.rs  mxc.rs  okex.rs  okx.rs  utils.rs  zb.rs  zbg.rs
crypto-crawler/src/utils/: cmc_rank.rs  lock.rs  mod.rs  spot_symbols.rs
crypto-crawler/tests/: binance.rs  bitfinex.rs  bitget.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bitz.rs  bybit.rs  coinbase_pro.rs  deribit.rs  dydx.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kucoin.rs  mexc.rs  mxc.rs  okex.rs  okx.rs  zb.rs  zbg.rs
crypto-crawler/tests/utils/: mod.rs
crypto-market/: Cargo.toml
crypto-market-type/: Cargo.toml
crypto-market-type/include/: crypto_market_type.h
crypto-market-type/src/: lib.rs
crypto-market/src/: main.rs  market.rs  utils.rs
crypto-market/src/exchanges/: binance.rs  mod.rs  okex.rs
crypto-markets/: Cargo.toml  README.md
crypto-markets/src/: error.rs  lib.rs  main.rs  market.rs  market_type.rs
crypto-markets/src/exchanges/: binance.rs  bitfinex.rs  bitget.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bybit.rs  coinbase_pro.rs  ftx.rs  huobi.rs  kraken.rs  kraken_futures.rs  mod.rs  okex.rs  okx.rs  utils.rs
crypto-markets/tests/: binance.rs  bitfinex.rs  bitget.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bitz.rs  bybit.rs  coinbase_pro.rs  deribit.rs  dydx.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kucoin.rs  mexc.rs  mxc.rs  okex.rs  okx.rs  zb.rs  zbg.rs
crypto-markets/tests/utils/: mod.rs
crypto-md-test/: Cargo.toml
crypto-md-test/src/: file_save.rs  main.rs
crypto-message/: Cargo.toml  README.md
crypto-message/src/: lib.rs  order.rs
crypto-message/src/compact/: message.rs  mod.rs  order.rs
crypto-message/src/proto/: README.md  message.proto  message.rs  mod.rs
crypto-msg-parser/: Cargo.toml
crypto-msg-parser/src/: f64_limited_serde.rs  lib.rs  main.rs  msg.rs  order.rs
crypto-msg-parser/src/exchanges/: binance.rs  bitfinex.rs  bitget.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bitz.rs  bybit.rs  coinbase_pro.rs  deribit.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kraken_futures.rs  kucoin.rs  mod.rs  okex.rs  okx.rs  utils.rs
crypto-msg-parser/tests/: binance.rs  bitfinex.rs  bitget.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bitz.rs  bybit.rs  coinbase_pro.rs  deribit.rs  dydx.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kucoin.rs  mexc.rs  mxc.rs  okex.rs  okx.rs  okx_v3.rs  utils.rs  zb.rs  zbg.rs
crypto-msg-type/: Cargo.toml
crypto-msg-type/include/: crypto_msg_type.h
crypto-msg-type/src/: lib.rs
crypto-msg-type/src/exchanges/: binance.rs  bitfinex.rs  bitmex.rs  bybit.rs  deribit.rs  ftx.rs  huobi.rs  mod.rs  okex.rs  okx.rs
crypto-pair/: Cargo.toml  README.md
crypto-pair/src/: lib.rs  main.rs  tests.rs
crypto-pair/src/exchanges/: binance.rs  bitfinex.rs  bitget.rs  bitmex.rs  bitstamp.rs  bybit.rs  deribit.rs  (+13 more)
crypto-pair/tests/: binance.rs  bitfinex.rs  bitget.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bitz.rs  bybit.rs  coinbase_pro.rs  deribit.rs  dydx.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kucoin.rs  mexc.rs  mxc.rs  okex.rs  okx.rs  zb.rs  zbg.rs
crypto-rest-client/: Cargo.toml  README.md
crypto-rest-client/src/: error.rs  lib.rs
crypto-rest-client/tests/: binance_future.rs  binance_inverse.rs  binance_inverse_swap.rs  binance_linear.rs  binance_linear_swap.rs  binance_option.rs  binance_spot.rs  bitfinex.rs  bitget_spot.rs  bitget_swap.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bitz_spot.rs  bitz_swap.rs  bybit.rs  coinbase_pro.rs  deribit.rs  dydx.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kucoin.rs  mexc.rs  mxc.rs  okex.rs  okx.rs  zb.rs  zbg.rs
crypto-ws-client/: Cargo.toml  README.md
crypto-ws-client/src/: lib.rs
crypto-ws-client/tests/: binance.rs  binance_option.rs  bitfinex.rs  bitget.rs  bithumb.rs  bitmex.rs  bitstamp.rs  bitz.rs  bybit.rs  coinbase_pro.rs  deribit.rs  dydx.rs  ftx.rs  gate.rs  huobi.rs  kraken.rs  kucoin.rs  mexc.rs  mxc.rs  okex.rs  okx.rs  zb.rs  zbg.rs
(+233 files in other folders)
