[workspace]
members = [
  "crypto-client",
  "crypto-contract-value",
  "crypto-pair",
  "crypto-markets",
  "crypto-market-type",
  "crypto-msg-parser",
  "crypto-msg-type",
  "crypto-rest-client",
  "crypto-ws-client",
  "crypto-crawler",
  "carbonbot",
]


[patch.crates-io]
crypto-market-type = { version = "1.0.5", path = "crypto-market-type" }
crypto-msg-type = { version = "1.0.3", path = "crypto-msg-type" }
