[package]
name = "carbonbot"
version = "1.9.7"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-crawler = "3.2.3"
crypto-market-type = "1.0.5"
crypto-msg-type = "1.0.0"
crypto-ws-client = "3.1.2"
redis = "0.21"
reopen = { version = "1", features = ["signals"] }
serde_json = "1"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }
log = "0.4"
env_logger = "0.9"

[profile.release]
lto = true
codegen-units = 1
