[package]
name = "carbonbot"
version = "2.1.6"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-crawler = "4.0.8"
crypto-market-type = "1.0.8"
crypto-msg-type = "1.0.5"
crypto-ws-client = "4.0.7"
redis = "0.21"
reopen = { version = "1", features = ["signals"] }
serde_json = "1"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
opt-level="z"
