[package]
name = "crypto-client"
version = "0.1.0"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "An unified restful client for all cryptocurrency exchanges."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-client"
homepage = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-client"

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
