[package]
name = "crypto-crawler"
version = "4.5.13"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "A rock-solid cryprocurrency crawler."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-crawler"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
crypto-markets = "1.3.7"
crypto-market-type = "1.1.3"
crypto-msg-parser = "2.7.3"
crypto-msg-type = "1.0.10"
crypto-pair = "2.3.3"
crypto-rest-client = "0.9.7"
crypto-ws-client = "4.11.10"
fslock = "0.2.1"
once_cell = "1.13.1"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking", "gzip"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev_dependencies]
env_logger = "0.9"
test-case = "1"
tokio = { version = "1", features = ["test-util"] }
