[package]
name = "crypto-crawler"
version = "4.7.2"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "A rock-solid cryprocurrency crawler."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-crawler"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
crypto-markets = "1.3.10"
crypto-market-type = "1.1.5"
crypto-msg-parser = "2.8.4"
crypto-msg-type = "1.0.11"
crypto-pair = "2.3.8"
crypto-rest-client = "1.0.0"
crypto-ws-client = "4.12.8"
fslock = "0.2.1"
once_cell = "1.16.0"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["blocking", "gzip"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev_dependencies]
env_logger = "0.9"
test-case = "1"
tokio = { version = "1", features = ["test-util"] }
