[package]
name = "crypto-market-type"
version = "1.0.7"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "Cryptocurrenty market type"
license = "Apache-2.0"
repository = "https://github.com/soulmachine/crypto-crawler-rs/tree/main/crypto-market-type"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = "0.23"
strum_macros = "0.23"
