[package]
name = "crypto-market"
version = "0.1.0"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2018"
description   = "Get all trading pairs of a cryptocurrency exchange"
license = "Apache-2.0"
repository = "https://github.com/soulmachine/crypto-crawler-rs"
homepage = "https://github.com/soulmachine/crypto-crawler-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.20"
strum_macros = "0.20"
