[package]
name = "crypto-markets"
version = "1.3.10"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "Fetch trading markets from a cryptocurrency exchange"
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-markets"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
chrono = "0.4.22"
crypto-market-type = "1.1.5"
crypto-pair = "2.3.7"
reqwest = { version = "0.11.12", features = ["blocking", "gzip", "socks"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dev_dependencies]
crypto-contract-value = "1.6.8"
test-case = "1"
