[package]
name = "decode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.136"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
miniz_oxide = "0.5.3"

yata = "0.6"
crypto-crawler = { path="../crypto-crawler" }
crypto-markets = { path="../crypto-markets" }
crypto-market-type = { path="../crypto-market-type" }
crypto-msg-parser = { path="../crypto-msg-parser" }
crypto-msg-type = { path="../crypto-msg-type" }
crypto-pair = { path="../crypto-pair" }
crypto-rest-client = { path="../crypto-rest-client" }
crypto-ws-client = { path="../crypto-ws-client" }
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
chrono = "0.4.19"
rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"
