[package]
name = "crypto-message"
version = "1.1.6"
edition = "2021"
description = "Unified data structures for all cryptocurrency exchanges."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-message"
keywords = ["cryptocurrency", "blockchain", "trading"]


[dependencies]
ahash = "0.7.6"
crypto-market-type = "1.1.1"
crypto-msg-type = "1.0.8"
protobuf = "3.1.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
strum = "0.24.1"
strum_macros = "0.24.2"
