[package]
name = "crypto-message"
version = "1.1.13"
edition = "2021"
description = "Unified data structures for all cryptocurrency exchanges."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-message"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
ahash = "0.8.0"
crypto-market-type = "1.1.3"
crypto-msg-type = "1.0.10"
protobuf = "3.1.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
strum = "0.24.1"
strum_macros = "0.24.3"

[features]
f32 = []
