[package]
name = "crypto-msg-parser"
version = "2.7.1"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Parse websocket messages from cryptocurreny exchanges"
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-msg-parser"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
chrono = "0.4.20"
crypto-contract-value = "1.5.6"
crypto-market-type = "1.1.2"
crypto-msg-type = "1.0.8"
crypto-message = "1.1.11"
crypto-pair = "2.3.0"
if_chain = "1.0.2"
once_cell = "1.13.0"
reqwest = { version = "0.11.11", features = ["blocking", "gzip"] }
simple-error = "0.2.3"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
strum = "0.24.1"
strum_macros = "0.24.2"
