[package]
name = "crypto-msg-parser"
version = "2.7.3"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Parse websocket messages from cryptocurreny exchanges"
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-msg-parser"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
chrono = "0.4.22"
crypto-contract-value = "1.5.8"
crypto-market-type = "1.1.3"
crypto-msg-type = "1.0.10"
crypto-message = "1.1.13"
crypto-pair = "2.3.3"
if_chain = "1.0.2"
once_cell = "1.13.1"
reqwest = { version = "0.11.11", features = ["blocking", "gzip"] }
simple-error = "0.2.3"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
strum = "0.24.1"
strum_macros = "0.24.3"
