[package]
name = "crypto-msg-parser"
version = "2.7.5"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Parse websocket messages from cryptocurreny exchanges"
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-msg-parser"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
chrono = "0.4.22"
crypto-contract-value = "1.5.9"
crypto-market-type = "1.1.3"
crypto-message = "1.1.13"
crypto-msg-type = "1.0.10"
crypto-pair = "2.3.3"
if_chain = "1.0.2"
once_cell = "1.14.0"
reqwest = { version = "0.11.11", features = ["blocking", "gzip"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
simple-error = "0.2.3"
strum = "0.24.1"
strum_macros = "0.24.3"
