[package]
name = "crypto-msg-type"
version = "1.0.2"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Cryptocurrenty message type"
license = "Apache-2.0"
repository = "https://github.com/soulmachine/crypto-crawler-rs/tree/main/crypto-msg-type"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
strum = "0.23"
strum_macros = "0.23"
