[package]
name = "crypto-msg-type"
version = "1.0.8"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Cryptocurrenty message type"
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-msg-type"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
strum = "0.24.1"
strum_macros = "0.24.2"
