[package]
name = "crypto-msg-type"
version = "1.0.9"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Cryptocurrenty message type"
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-msg-type"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
strum = "0.24.1"
strum_macros = "0.24.3"
