[package]
name = "crypto-pair"
version = "2.2.12"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Parse exchange-specific symbols to unified format"
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-pair"
homepage = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-pair"

[dependencies]
crypto-market-type = { path = "../crypto-market-type" }
once_cell = "1.13.0"
reqwest = { version = "0.11.11", features = ["blocking", "gzip"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
