[package]
name = "crypto-rest-client"
version = "0.9.7"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "An RESTful client for all cryptocurrency exchanges."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-rest-client"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
crypto-market-type = "1.1.3"
log = "0.4.17"
once_cell = "1.13.1"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking", "gzip", "socks"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

[dev_dependencies]
test-case = "1"
