[package]
name = "crypto-rest-client"
version = "1.0.0"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "An RESTful client for all cryptocurrency exchanges."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-rest-client"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
crypto-market-type = "1.1.5"
once_cell = "1.16.0"
log = "0.4.17"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking", "gzip", "socks"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dev_dependencies]
test-case = "1"
