[package]
name = "crypto-ws-client"
version = "4.11.7"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "A versatile websocket client that supports many cryptocurrency exchanges."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-ws-client"
keywords = ["cryptocurrency", "blockchain", "trading", "websocket"]

[dependencies]
async-trait = "0.1.56"
flate2 = "1.0.24"
futures-util = "0.3.21"
governor = "0.4.2"
nonzero_ext = "0.3.0"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["gzip"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["rt-multi-thread",  "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.17.1", features = ["rustls-tls-native-roots"] }
fast-socks5 = "0.8.0"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["test-util"] }
