[package]
name = "crypto-ws-client"
version = "4.12.7"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "A versatile websocket client that supports many cryptocurrency exchanges."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-ws-client"
keywords = ["cryptocurrency", "blockchain", "trading", "websocket"]

[dependencies]
async-trait = "0.1.57"
flate2 = "1.0.24"
futures-util = "0.3.24"
governor = "0.5.0"
nonzero_ext = "0.3.0"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["gzip"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.17.2", features = ["rustls-tls-native-roots"] }
fast-socks5 = "0.8.1"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["test-util"] }
